--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
   <header>
     <a href="javascript:void(0)" class="skip-link">Lewati ke konten utama</a>
 
-    <div class="header-container">
-      <h1 class="site-title">Tridadi CareMap</h1>
+    <div class="header-container px-11">
+      <h1 class="site-title text-white">Tridadi CareMap</h1>
 
       <button id="menu-toggle" class="hamburger" aria-label="Navigasi halaman">
         <span></span>
@@ -46,7 +46,7 @@
         <span></span>
       </button>
 
-      <nav id="main-nav" class="nav-links">
+      <nav id="main-nav" class="nav-links pr-6">
         <a href="#/home">Home</a>
         <a href="#/map">Peta</a>
         <a href="#/credit">Kredit</a>
@@ -58,18 +58,22 @@
 
   </main>
 
-  <footer id="site-footer">
-    <div class="footer-inner">
-      <div class="footer-left">
-        <p>© 2025 Universitas Gadjah Mada</p>
-        <p>KKN-PPM UGM YO-021 | Miftah Desma S. & Kontributor</p>
+  <footer id="site-footer" class="text-white py-8">
+    <div class="max-w-7xl mx-auto px-4 flex flex-col items-center">
+      <div class="flex space-x-6 text-2xl mt-2">
+        <a href="https://www.instagram.com/pandriberseri" target="_blank" aria-label="Instagram"
+           class="text-white hover:text-white transition-transform transform hover:scale-110">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="mailto:pandriberseri.kknppmugm@gmail.com" aria-label="Email"
+           class="text-white hover:text-white transition-transform transform hover:scale-110">
+          <i class="fa-regular fa-envelope"></i>
+        </a>
       </div>
-      <div class="footer-right">
-        <p>Kontak: <a href="mailto:miftah@mail.ugm.ac.id" class="email-link">miftah@mail.ugm.ac.id</a></p>
-      </div>
+      <p class="text-sm text-center tracking-wide mb-2 mt-2">KKN PPM UGM YO021 2025</p>
     </div>
   </footer>
-
+  
   <script>
     const toggleBtn = document.getElementById("menu-toggle");
     const nav = document.getElementById("main-nav");
