--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <span></span>
       </button>
 
-      <nav id="main-nav" class="nav-links pr-6">
+      <nav id="main-nav" class="nav-links">
         <a href="#/home">Home</a>
         <a href="#/map">Peta</a>
         <a href="#/credit">Kredit</a>
