- activated service worker - little fix on appearance

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <a href="javascript:void(0)" class="skip-link">Lewati ke konten utama</a>
 
     <div class="header-container px-11">
-      <h1 class="site-title text-white">Tridadi CareMap</h1>
+      <h1 class="site-title text-white"><a href="https://github.com/mifffth/Tridadi-Caremap.git">Tridadi CareMap</a></h1>
 
       <button id="menu-toggle" class="hamburger" aria-label="Navigasi halaman">
         <span></span>
