--- a/src/index.html
+++ b/src/index.html
@@ -39,10 +39,11 @@
   <header>
     <a href="javascript:void(0)" class="skip-link">Lewati ke konten utama</a>
 
-    <div class="header-container px-11">
-      <h1 class="site-title text-white"><a href="https://github.com/mifffth/Tridadi-Caremap.git">Tridadi CareMap</a></h1>
+    <div class="header-container" style="padding-inline: 1rem; max-width: 1280px; margin-inline: auto;">
+      <h1 class="site-title text-white ml-4"><a href="https://github.com/mifffth/Tridadi-Caremap.git">Tridadi
+          CareMap</a></h1>
 
-      <button id="menu-toggle" class="hamburger" aria-label="Navigasi halaman">
+      <button id="menu-toggle" class="hamburger mr-4" aria-label="Navigasi halaman">
         <span></span>
         <span></span>
         <span></span>
