--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,7 @@
     <a href="javascript:void(0)" class="skip-link">Lewati ke konten utama</a>
 
     <div class="header-container" style="padding-inline: 1rem; max-width: 1280px; margin-inline: auto;">
-      <h1 class="site-title text-white ml-4"><a href="https://github.com/mifffth/Tridadi-Caremap.git">Tridadi
-          CareMap</a></h1>
+      <h1 class="site-title text-white ml-4">Tridadi CareMap</h1>
 
       <button id="menu-toggle" class="hamburger mr-4" aria-label="Navigasi halaman">
         <span></span>
